# jlc_has_it

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup-mcp.sh  ultralibrarian_scraper_prototype.py
.claude/: CLAUDE.md  mcp_settings.json  statusline.py
docs/: API.md  PHASE_6_COMPLETION.md  PHASE_7_COMPLETION.md  PROJECT_STATUS.md  RUNNING_TESTS.md  SCOPE_SIMPLIFICATION.md  TEST_COVERAGE.md  TEST_TIMEOUTS.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  easyeda2kicad-error-handling.md  jlcparts-integration.md  jlcpcb-api-overview.md  kicad-formats.md  library-sources.md  mcp-architecture.md
jlc_has_it/: __init__.py
jlc_has_it/cli/: main.py
jlc_has_it/core/: database.py  library_downloader.py  models.py  search.py  ultralibrarian_browser.py  ultralibrarian_detector.py  ultralibrarian_extractor.py  ultralibrarian_renamer.py  ultralibrarian_waiter.py  unit_utils.py
jlc_has_it/mcp/: __main__.py  tools.py
scripts/: setup_test_database.py
tasks/: 00-001-init-python-project.yaml  00-002-setup-testing.yaml  00-003-setup-linting.yaml  01-001-research-jlcpcb-api.yaml  01-002-jlcpcb-client-basic.yaml  01-003-component-data-model.yaml  02-001-library-file-copying.yaml  02-001-research-kicad-formats.yaml  02-002-sexpr-parser.yaml  02-003-symbol-reader.yaml  02-004-symbol-writer.yaml  02-005-footprint-handler.yaml  02-006-project-integration.yaml  03-001-basic-search.yaml  03-002-spec-filtering.yaml  03-003-ranking-algorithm.yaml  04-001-integrate-library-downloader.yaml  04-001-research-library-sources.yaml  04-002-library-downloader.yaml  04-003-generic-symbol-generator.yaml  05-001-cli-framework.yaml  05-002-search-command.yaml  05-003-interactive-selection.yaml  05-004-add-command.yaml  05-005-config-command.yaml  06-001-query-parser-design.yaml  06-002-pattern-based-parser.yaml  06-003-llm-parser.yaml  06-004-integrate-nlp-search.yaml  07-001-fts5-search-indexing.yaml  07-002-pagination-support.yaml  08-001-schema-optimization.yaml  08-002-package-filtering.yaml  08-003-attribute-filtering.yaml  09-001-search-library-validation.yaml  10-001-switch-easyeda-to-python-library.yaml  10-002-atomic-file-operations.yaml  10-003-footprint-format-upgrade.yaml  11-001-ultralibrarian-scraping-research.yaml  12-001-ultralibrarian-downloads-detector.yaml  (+20 more)
test_downloads/: easyeda2kicad.kicad_sym
test_downloads/easyeda2kicad.pretty/: C0402.kicad_mod
test_downloads/test_missing/: test.kicad_sym
tests/: conftest.py  test_sample.py
tests/core/: test_database.py  test_fts5_and_pagination.py  test_library_downloader.py  test_models.py  test_phase13_library_downloader.py  test_project_integration.py  test_search.py  test_ultralibrarian_detector.py  test_ultralibrarian_extraction.py  test_unit_utils.py
tests/integration/: test_end_to_end.py  test_real_database.py  (+1 more)
tests/mcp/: test_tools.py  (+2 more)
(+2 files in other folders)
